# Fantom-Multisender-ERC20

./: README.md  index.html  interface.js  main.js
contracts/: FantomMultisenderFlat.sol  UTMMultisenderFlat.sol
css/: blocks.css  styles.css  theme-styles.css  widgets.css
js/: interface.js  main.js  networks.js
solana-multisender/: Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
solana-multisender/migrations/: deploy.ts
solana-multisender/programs/multisender/: Cargo.toml
solana-multisender/programs/multisender/src/: lib.rs
solana-multisender/scripts/: deploy-localnet.sh
solana-multisender/tests/: multisender.ts
