[package]
name = "multisender"
version = "0.1.0"
description = "Solana multisender program"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "multisender"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
id = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
